Fix IMAS-4820 deprecation warning